[package]
name = "admt_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
#actix-rt = "2.2.0"
serde = "1.0.130"
mongodb = "2.1.1"
bson = "1.2.1"
serde_json = "1.0.64"
futures = "0.3.15"
lazy_static = "1.4.0"
once_cell = "1.8.0"
